# CSCI441

./: README.md
Projects/01/: .gitignore  CMakeLists.txt  README.md  TODO.txt  images.cmake
Projects/01/include/raytracer/config/: config.h.cmake
Projects/01/include/raytracer/domain/: RGB.h  config.h  image_2D.h  material.h  ray.h  screen.h  screen_iterator.h  shape.h  vector.h  vector_3D.h
Projects/01/include/raytracer/domain/shapes/: shape.h  sphere.h  triangle.h
Projects/01/include/raytracer/environment/: environment.h  family.h  light_source.h  screen.h  screen_iterator.h  simple_environment.h  simple_worker.h
Projects/01/include/raytracer/intersection/: intersectee.h  util.h
Projects/01/include/raytracer/output/: image_output.h
Projects/01/include/raytracer/parse/: parser.h
Projects/01/include/raytracer/util/: copy.h  logging.h  negative.h  quad.h  worker.h
Projects/01/instructions_and_provided_resources/: .gitignore  Szymczak.tgz  corners.tar  inputs.tar  testdata.tar
Projects/01/lib/: CMakeLists.txt
Projects/01/lib/domain/: CMakeLists.txt  RGB.cpp  config.cpp  image_2D.cpp  material.cpp  ray.cpp  screen.cpp  screen_iterator.cpp  vector_3D.cpp
Projects/01/lib/domain/shapes/: CMakeLists.txt  sphere.cpp  triangle.cpp
Projects/01/lib/drivers/: CMakeLists.txt  common.h  find_intersections.cpp  main.cpp  parse_test.cpp  simple_image.cpp  single_test.cpp
Projects/01/lib/environment/: CMakeLists.txt  screen.cpp  screen_iterator.cpp  simple_environment.cpp  simple_worker.cpp  simple_worker.h
Projects/01/lib/output/: CMakeLists.txt  image_output.cpp  util.h
Projects/01/lib/parse/: CMakeLists.txt  helper.cpp  main.cpp  parser.cpp
Projects/01/src/: CMakeLists.txt  main.cpp
Projects/01/src/drivers/: CMakeLists.txt  main.cpp
Projects/01/src/parse/: CMakeLists.txt  helper.cpp  helper.h
Projects/01/src/parse/include/: helper.h
Projects/01/src/parse/src/: helper.cpp  main.cpp
Projects/02/: CMakeLists.txt  README.md
Projects/02/include/glviewer/: config.h.cmake  types.h
Projects/02/include/glviewer/domain/: point.h  triangle.h  types.h
Projects/02/include/glviewer/parse/: environment.h  parse.h
Projects/02/instructions_and_resources/: .gitignore  buffer.c  bunnes.tgz  program.c  sample2.tgz  short.t
Projects/02/instructions_and_resources/Links/: Free OpenGL 4 book.desktop  GLUT API description (includes a list of all functions).desktop  GLUT man pages.desktop  GLUT tutorial online.desktop  Lighthouse3d GLSL tutorial.desktop  Most recent widely implemented OpenGL and GLSL specification.desktop  OpenGL 4 reference pages.desktop  OpenGL.org.desktop  glm library.desktop
Projects/02/lib/: CMakeLists.txt  glviewer.cpp  shader_locations.h.cmake
Projects/02/lib/gl/: CMakeLists.txt  program.cpp  viewer.cpp
Projects/02/lib/parse/: CMakeLists.txt  parse.cpp
Projects/02/lib/shaders/: flat_fragment.glsl  flat_vertex.glsl  fragment.glsl  fsh_square.glsl  gouraud_fragment.glsl  gouraud_vertex.glsl  phong_fragment.glsl  phong_vertex.glsl  vertex.glsl  vsh_cube.glsl  vsh_square.glsl
Projects/03/: CMakeLists.txt  Makefile  README.md
Projects/03/include/glviewer/: config.h.cmake
Projects/03/include/glviewer/domain/: triangle.h
Projects/03/include/glviewer/gl/: buffer.h  program.h  shader.h  texture.h  vertexarray.h
Projects/03/instructions_and_resources/: sphere.t.bz2
Projects/03/lib/: CMakeLists.txt  glviewer.cpp  shader_locations.h.cmake  texture_locations.h.cmake
Projects/03/lib/gl/: shader.cpp  texture.cpp  vertexarray.cpp
Projects/03/lib/shaders/: doughnut_fragment.glsl  doughnut_vertex.glsl  environment_fragment.glsl  environment_vertex.glsl  flat_vertex.glsl  fsh_cube.glsl  gouraud_vertex.glsl  phong_fragment.glsl  phong_vertex.glsl
Projects/03/lib/textures/EnvMap/: campus_probe.ppm  stpeters_probe.ppm  thn_spheremap_emap.ppm
Projects/03/lib/textures/Tilable/: tilable-4.ppm
Projects/04/: CMakeLists.txt  Makefile
Projects/04/include/glviewer/: config.h.cmake  shader_locations.h.cmake  texture_locations.h.cmake
Projects/04/include/glviewer/gl/: program.h  shader.h  vertexarray.h
Projects/04/lib/: CMakeLists.txt  glviewer.cpp
Projects/04/lib/gl/: CMakeLists.txt  buffer.cpp  program.cpp  shader.cpp  texture.cpp  vertexarray.cpp  viewer.cpp
Projects/04/lib/shaders/: doughnut_vertex.glsl
Projects/04/lib/textures/EnvMap/: building_probe.ppm  galileo_probe.ppm  grovefilter.ppm  rnl_probe.ppm  thn_spheremap_grovefilter.ppm
Projects/04/lib/textures/Tilable/: tilable-1.ppm
Projects/04/shaders/: carving_fragment.glsl  carving_vertex.glsl  doughnut_fragment.glsl  fsh_square.glsl  voronoi_fragment.glsl  voronoi_vertex.glsl  vsh_square.glsl
Projects/04/textures/: col-blur.ppm  guggenheim-2blur.ppm  squirrels-blur.ppm
Projects/04/textures/EnvMap/: beach_probe.ppm  grace.ppm  mat1.ppm  mat2.ppm  spheremap_bryce_blurred.ppm  thn_spheremap_gracefilter.ppm  thn_spheremap_nosplashmap.ppm  thn_spheremap_splashmap.ppm  thn_spheremap_studio.ppm
Projects/04/textures/Tilable/: tilable-2.ppm  tilable-3.ppm
Review/2/study_guides/: 2007.answers.txt  2012.answers.txt
